# gameserver-client

./: .gitignore  README.md  pyproject.toml  settings.json
.github/workflows/: pylint.yml
gameserver/: client_cli.py  models.py  protocol.py  server.py  server_cli.py
gameserver/client/: client.py
gameserver/data/: shop_items.json
gameserver/db/: __init__.py  manager.py  settings.py  tables.py
gameserver/db/models/: tables.py
gameserver/misc/: connection.py  errors.py  models.py  protocol.py  settings.py
gameserver/server/: server.py
tests/: settings.json  test_client.py  test_server.py
tools/: equipment_names.txt  generate_items.py  ship_names.txt  shop_items.json
